[gd_scene load_steps=5 format=3 uid="uid://dl0rluq8bclba"]

[ext_resource type="Texture2D" uid="uid://bw86q85xmidu0" path="res://Assets/ui/panel_beige.png" id="1_6ttex"]
[ext_resource type="LabelSettings" uid="uid://begm1qakbj2jq" path="res://Resources/white_48.tres" id="2_2b86x"]
[ext_resource type="Script" uid="uid://cqjy22cesp0id" path="res://Scenes/LevelButton/level_button.gd" id="2_6j25p"]
[ext_resource type="LabelSettings" uid="uid://pf6c5wp2cb8r" path="res://Resources/white_32.tres" id="3_6j25p"]

[node name="LevelButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("1_6ttex")
script = ExtResource("2_6j25p")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MC/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "3"
label_settings = ExtResource("2_2b86x")

[node name="LevelLabel2" type="Label" parent="MC/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "999"
label_settings = ExtResource("3_6j25p")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
